# BackTechCareer

./: .env  .gitignore  hash_test.py  path.py  pyproject.toml
backend/: main.py
backend/api/v1/controllers/: auth_controller.py
backend/api/v1/routes/: auth_routes.py
backend/core/: config.py
backend/db/: connection.py
backend/db/queries/: user_queries.py
backend/ml/data/model1_cv_role/3.processed/v1_english/: cv_labeled_final_eda.ipynb
backend/ml/data/model3_salaries/2.cleaning/: dataset_salaries.ipynb
backend/ml/data/model3_salaries/3.processed/: dataset_salaries_eda.ipynb
backend/ml/models/cv_role/: model.pkl  vectorizer.pkl
backend/ml/models/skills/: skill_dict.json
backend/training/model1_cv_role_training/: training_cv.py
backend/training/model3_salaries_training/: training_salaries.ipynb
backend/training/model4_skills_training/: skills_getter.py  training_skils.ipynb
data/model1_cv_role/2.cleaning/: resumes_dataset1.ipynb  resumes_dataset2_clean.csv  role_mapping_manual.csv
models/cv_role/: model1.ipynb
src/model1_cv_role_training/: prova.ipynb  prova2.ipynb  training_cv.1.ipynb  training_cv_3.ipynb
src/model3_salaries_training/: training_salaries.ipynb
