[project]
name = "techcareer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "jupyterlab>=4.0,<5.0",
    "matplotlib>=3.8,<3.9",
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<2.3",
    "scikit-learn>=1.4,<1.8",
    "seaborn>=0.13,<0.14",

    "tensorflow==2.14.0",
    "tensorflow-hub==0.14.0",
    # IMPORTANTE: sin tensorflow-text en Windows
    # "tensorflow-text==2.14.0; sys_platform != 'win32'",  # si quieres que solo se instale en Linux/Mac

    "torch>=2.2,<2.4",
    "transformers>=4.41,<4.43",
]
